--- a/styles/all/theme/common.css
+++ b/styles/all/theme/common.css
@@ -11,10 +11,7 @@
 #assistant-btn:focus {
 	outline: none;
 }
-#passTxt {
-	background-color: #E8F4E6;
-}
-div.input-visual-control {
+div.input-controll-visual {
 	display: block;
 	position: absolute;
 	right: 0;
